// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookableForm component Template should render correctly 1`] = `
"
<form id=\\"bookable\\"
      data-test=\\"form\\"
      class=\\"bookable mx-4\\"
>
  <div icon-name=\\"edit\\">
    <text-field-stub modelvalue=\\"Couch\\"
                     data-test=\\"form-name\\"
                     placeholder=\\"Mock translation\\"
    >
    </text-field-stub>
  </div>
  <div icon-name=\\"description\\">
    <text-field-stub modelvalue=\\"Couch\\"
                     data-test=\\"form-description\\"
                     placeholder=\\"Mock translation\\"
    >
    </text-field-stub>
  </div>
</form>
"
`;

exports[`BookableForm component Template should render correctly with new bookable 1`] = `
"
<form id=\\"bookable\\"
      data-test=\\"form\\"
      class=\\"bookable mx-4\\"
>
  <div icon-name=\\"edit\\">
    <text-field-stub modelvalue
                     data-test=\\"form-name\\"
                     placeholder=\\"Mock translation\\"
    >
    </text-field-stub>
  </div>
  <div icon-name=\\"description\\">
    <text-field-stub modelvalue
                     data-test=\\"form-description\\"
                     placeholder=\\"Mock translation\\"
    >
    </text-field-stub>
  </div>
</form>
"
`;
